--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
         <div id="navbar">
             <button class="nav-button" id="chatbot-tab">Chatbot</button>
             <button class="nav-button" id="talk-tab">Talk</button>
-            <button class="nav-button" id="settings-tab">Settings</button>
+            <button id="transcript-tab" class="nav-button">Video Transcript</button>
         </div>
         <div id="content">
             <!-- Dynamic content will be inserted here -->
